# strawbevy-jam

./: .gitignore  Cargo.toml  LICENSE.md  LICENSE_APACHE.md  README.md  makefile
.github/workflows/: ci.yaml  release.yaml
assets/dialogue/: dialogue.yarn  test.yarn
assets/models/: escena.blend  escena.glb
assets/textures/: card.aseprite  drinks.aseprite  remie.aseprite  textures.aseprite
docs/: contexto.md  ideas.md
src/: dialogue.rs  main.rs  yarn.rs
