[package]
name = "strawbevy-jam"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f0f5d79" }
yarn-spinner = { git = "https://github.com/sanbox-irl/yarn-spinner" }
noise = "0.8.2"

[profile.dev.package."*"]
opt-level = 3 # High optimizaitons for libraries (such as bevy)
